--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="format-detection" content="telephone=no">
+        <meta name="msapplication-tap-highlight" content="no">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
-</body>
+        <title></title>
+
+        <!-- css -->
+        <link rel="stylesheet" type="text/css" href="css/all.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" href="font/iconfont.css" type="text/css" />
+
+        <!-- js -->
+        <script src="cordova.js"></script>
+        <script src="js/jquery-2.1.1.min.js"></script>
+        <script src="js/viewport.js"></script>
+        <script src="js/lib.js"></script>
+        <script src="js/capp.js"></script>
+        <script src="js/index.js"></script>
+        
+    </head>
+    <body>
+
+        <div class="index_video box_s center" id="video">
+
+        </div>
+        <div class="index_welcome">
+            您好!<br/>
+            <span>欢迎来到Bens个人系统</span>
+        </div>
+
+        <div class="index_main_body" id="index_main_body">
+            <div class="index_btn" id="index_btn">登 陆</div>
+            <div class="index_login" id="index_login">
+                <label class="box_h center_s border_box _rows _rows1">
+                    <span class="iconfont">&#xe607;</span>
+                    <input class="boxflex1" type="text" id="name" placeholder="请输入用户名" />
+                </label>
+                <label class="box_h center_s border_box _rows _rows2">
+                    <span class="iconfont">&#xe648;</span>
+                    <input class="boxflex1" type="password" id="pass" placeholder="请输入密码">
+                </label>
+                <div class="login_submit radius _rows _rows3">提 交</div>
+            </div>
+        </div>
+
+    </body>
 </html>
