--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
         <!-- css -->
         <link rel="stylesheet" type="text/css" href="css/all.css">
+        <link rel="stylesheet" href="font/iconfont.css" type="text/css" />\
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <link rel="stylesheet" href="font/iconfont.css" type="text/css" />
 
         <!-- js -->
         <script src="cordova.js"></script>
@@ -35,15 +35,15 @@
         <div class="index_main_body" id="index_main_body">
             <div class="index_btn" id="index_btn">登 陆</div>
             <div class="index_login" id="index_login">
-                <label class="box_h center_s border_box _rows _rows1">
+                <label class="box_h center_s border_box">
                     <span class="iconfont">&#xe607;</span>
                     <input class="boxflex1" type="text" id="name" placeholder="请输入用户名" />
                 </label>
-                <label class="box_h center_s border_box _rows _rows2">
+                <label class="box_h center_s border_box">
                     <span class="iconfont">&#xe648;</span>
                     <input class="boxflex1" type="password" id="pass" placeholder="请输入密码">
                 </label>
-                <div class="login_submit radius _rows _rows3">提 交</div>
+                <div class="login_submit radius">提 交</div>
             </div>
         </div>
 
